[package]
name = "maze_traversal"
version = "0.3.0"
edition = "2021"

[dependencies]
bevy = "0.7.0"
bevy-web-resizer = "2.0.0"
bevy_prototype_lyon = "0.5.0"
rand = "0.8.5"

# WASMの場合にどれか指定する必要がある？？
#
# rand = { version = "0.8.4", features = [ "wasm-bindgen" ] }
# getrandom = { version = "0.2.4", features = [ "js" ] }
# getrandom = { version = "0.2.4", features = [ "wasm-bindgen" ] }