[package]
name = "maze_traversal"
version = "0.6.0"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
official_examples = { path = "../official_examples" }
bevy = "0.10"
rand = "0.8"
counted-array = "0.1"
once_cell = "1"

# WASMの場合にどれか指定する必要がある？？
#
# rand = { version = "0.8.4", features = [ "wasm-bindgen" ] }
# getrandom = { version = "0.2.4", features = [ "js" ] }
# getrandom = { version = "0.2.4", features = [ "wasm-bindgen" ] }